--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'app/css/all.min.css' %}" />
     <link rel="stylesheet" href="{% static 'app/css/style.css' %}" />
 
-    <title>Document</title>
+    <title>Dairy Products | {% block %}{% endblock %}Document</title>
 </head>
 <body>
     <h1>Hello World</h1>
