--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -30,31 +30,44 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
-              <li class="nav-item dropdown">
+              < class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   products
                 </a>
                 <ul class="dropdown-menu">
                   <li><a class="dropdown-item" href="#">Milk</a></li>
-                  <li><a class="dropdown-item" href="#">Milk</a></li>
-                  <li><a class="dropdown-item" href="#">Milk</a></li>
-                  <li><a class="dropdown-item" href="#">Milk</a></li>
-                  <li><a class="dropdown-item" href="#">Milk</a></li>
+                  <li><a class="dropdown-item" href="#">Curd</a></li>
+                  <li><a class="dropdown-item" href="#">Lassi</a></li>
+                  <li><a class="dropdown-item" href="#">Milkshake</a></li>
+                  <li><a class="dropdown-item" href="#">Ghee</a></li>
+                  <li><a class="dropdown-item" href="#">Paneer</a></li>
+                  <li><a class="dropdown-item" href="#">Cheese</a></li>
+                  <li><a class="dropdown-item" href="#">Ice-creams</a></li>
                 </ul>
               <li class="nav-item">
-                <a class="nav-link" href="#">Link</a>
-              </li>
-             
+                <a class="nav-link text-white" href="#">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                <a class="nav-link text-white" href="#">Contact Us</a>
               </li>
+              
             </ul>
             <form class="d-flex" role="search">
               <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
               <button class="btn btn-outline-success" type="submit">Search</button>
             </form>
           </div>
+
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nab-item dropdown mx-2">
+                <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    {{request.user.username|capfirst}}
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="profileDropdown">
+                    <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
+                </ul>
+            </li>
+          </ul>
         </div>
       </nav>
 
