--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -60,14 +60,12 @@
 
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nab-item dropdown mx-2">
-                <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                    {{request.user.username|capfirst}}
-                </a>
+                <a class="nav-link dropdown-toggle text-white" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Kenneth</a>
                 <ul class="dropdown-menu" aria-labelledby="profileDropdown">
-                    <li><a class="dropdown-item" href="{% url 'profile' %}">Profile</a></li>
-                    <li><a class="dropdown-item" href="{% url 'orders' %}">Orders</a></li>
-                    <li><a class="dropdown-item" href="{% url 'passwordchange' %}">Change Password</a></li>
-                    <li><a class="dropdown-item" href="{% url 'logout' %}">Logout</a></li>
+                    <li><a class="dropdown-item" href="#">Profile</a></li>
+                    <li><a class="dropdown-item" href="#">Orders</a></li>
+                    <li><a class="dropdown-item" href="#">Change Password</a></li>
+                    <li><a class="dropdown-item" href="#">Logout</a></li>
                 </ul>
             </li>
           </ul>
