--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -30,7 +30,7 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
-              < class="nav-item dropdown">
+              {% comment %} < class="nav-item dropdown"/> {% endcomment %}
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   products
                 </a>
