--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -2,6 +2,10 @@
 {% load static %}
 {% block title %}Home{% endblock title %}
 
+{% block banner_slider %}{% endblock banner_slider %}
+
+
+
 {% block main-content %}
     <h1>Welcome to Dairy Products site.....</h1>
 {% endblock main-content %}
