--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
 
@@ -30,7 +29,6 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="/">Home</a>
               </li>
-              {% comment %} < class="nav-item dropdown"/> {% endcomment %}
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   products
                 </a>
@@ -68,13 +66,29 @@
                     <li><a class="dropdown-item" href="#">Logout</a></li>
                 </ul>
             </li>
+            <li class="nab-item dropdown mx-2">
+              <a href="#" class="nav-link text-white">Cart 4</a>
+            </li>
+            </li>
+            <li class="nab-item dropdown mx-2">
+              <a href="#" class="nav-link text-white">Wishlist 4</a>
+            </li>
+            </li>
+            <li class="nab-item dropdown mx-2">
+              <a href="#" class="nav-link text-white">Login</a>
+            </li>
+            </li>
+            <li class="nab-item dropdown mx-2">
+              <a href="#" class="nav-link text-white">Registration</a>
+            </li>
           </ul>
         </div>
       </nav>
 
+      {% block banner_slider %}{% endblock banner_slider %}
       {% block main-content %}{% endblock main-content %}
 
-      <footer>
+      <footer class="container-fluid fixed-bottom bg-success text-center p-2 mt-5">
         Copyright : 2024 || Developed by : Kariuki Ken
       </footer>
 
