--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -6,7 +6,7 @@
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="..." class="d-block w-100" alt="...">
+                <img src="{% static 'app/images/banner/b1.jpg' %}" class="d-block w-100" alt="banner image">
             </div>
             <div class="carousel-item">
                 <img src="..." class="d-block w-100" alt="...">
