--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -3,12 +3,20 @@
 {% block title %}Home{% endblock title %}
 
 {% block banner_slider %}
-    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <img src="{% static 'app/images/banner/b1.jpg' %}" class="d-block w-100" alt="banner image">
             </div>
-            
+            <div class="carousel-item">
+                <img src="{% static 'app/images/banner/b2.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'app/images/banner/b3.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'app/images/banner/b4.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
         </div>
     </div>
 {% endblock banner_slider %}
