--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -21,7 +21,15 @@
     </div>
 {% endblock banner_slider %}
 
+{% block information%}{% endblock %}
+<div class="container">
+    <div class="row bg-success text-center p-5 text-white border-bottom shadow">
+        <h1>Products</h1>
+        <small class="fs-5">Neel offers a wide range of products in Both Liquid milk and by-produt cartegories. The liquid milk comprises of 6 types of variantsand the By-Product comprises of 14 Variants.
 
+            Neel offers a wide range of Milk Products comprising of Fresh Milk, Butter, Ghee, Flavoured Milk, Doodh peda, Icecream, Curd and Skimmed Milk Powder.</small>
+    </div>
+</div>
 
 {% block main-content %}
     <h1>Welcome to Dairy Products site.....</h1>
