"Updated home.html template: added endblock tag for 'information' block and moved its position."

--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -21,7 +21,7 @@
     </div>
 {% endblock banner_slider %}
 
-{% block information%}{% endblock %}
+{% block information%}{% endblock information %}
 <div class="container">
     <div class="row bg-success text-center p-5 text-white border-bottom shadow">
         <h1>Products</h1>
@@ -30,6 +30,7 @@
             Neel offers a wide range of Milk Products comprising of Fresh Milk, Butter, Ghee, Flavoured Milk, Doodh peda, Icecream, Curd and Skimmed Milk Powder.</small>
     </div>
 </div>
+{% endblock information %}
 
 {% block main-content %}
     <h1>Welcome to Dairy Products site.....</h1>
