--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -21,7 +21,7 @@
     </div>
 {% endblock banner_slider %}
 
-{% block information%}{% endblock information %}
+{% block information%}
 <div class="container">
     <div class="row bg-success text-center p-5 text-white border-bottom shadow">
         <h1>Products</h1>
