--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -31,7 +31,44 @@
     </div>
 </div>
 {% endblock information %}
-
 {% block main-content %}
-    <h1>Welcome to Dairy Products site.....</h1>
+<div class="container">
+    <h2 class="text-center">Dairy Products</h2>
+    <br><br>
+    <div class="row container">
+        <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+            <div class="goodnesssec buttermilk smbg">
+                <a href="#">
+                    <div class="goodnessseccont text-center">
+                        <img src="{% static 'app/images/product/buffalo-ghee.png'%}" class="img-responsive" alt="">
+                        <p class="mlkpro">Ghee</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+            <div class="goodnesssec buttermilk smbg">
+                <a href="#">
+                    <div class="goodnessseccont text-center">
+                        <img src="{% static 'app/images/product/curd-total.png'%}" class="img-responsive center-block" alt="">
+                        <p class="mlkpro">Curd</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
+            <div class="goodnesssec buttermilk smbg">
+                <a href="#">
+                    <div class="goodnessseccont text-center">
+                        <img src="{% static 'app/images/product/kulfi.png'%}" class="img-responsive center-block" alt="">
+                        <p class="mlkpro">Kulfi</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
+<br/><br/>
 {% endblock main-content %}
