--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -2,3 +2,6 @@
 {% load static %}
 {% block title %}Category{% endblock title %}
 
+{% block main-content %}
+<h1>Category</h1>
+{% endblock main-content %}
