--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 {% load static %}
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -32,15 +33,16 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                   products
                 </a>
+
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Milk</a></li>
-                  <li><a class="dropdown-item" href="#">Curd</a></li>
-                  <li><a class="dropdown-item" href="#">Lassi</a></li>
-                  <li><a class="dropdown-item" href="#">Milkshake</a></li>
-                  <li><a class="dropdown-item" href="#">Ghee</a></li>
-                  <li><a class="dropdown-item" href="#">Paneer</a></li>
-                  <li><a class="dropdown-item" href="#">Cheese</a></li>
-                  <li><a class="dropdown-item" href="#">Ice-creams</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'ML' %}">Milk</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'CR' %}">Curd</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'MS' %}">Lassi</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'LS' %}">Milkshake</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'GH' %}">Ghee</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'PN' %}">Paneer</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'CZ' %}">Cheese</a></li>
+                  <li><a class="dropdown-item" href="{% url 'category' 'IC' %}">Ice-creams</a></li>
                 </ul>
               <li class="nav-item">
                 <a class="nav-link text-white" href="#">About Us</a>
