--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -3,5 +3,7 @@
 {% block title %}Category{% endblock title %}
 
 {% block main-content %}
-<h1>Category: {{val}}</h1>
+    <div>
+        
+    </div>
 {% endblock main-content %}
