"Updated views.py to import Count from django.db.models and added a new query to CategoryView; modified category.html template to include a new container and row structure."

--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -3,7 +3,12 @@
 {% block title %}Category{% endblock title %}
 
 {% block main-content %}
-    <div>
-        
+    <div class="container my-5">
+        <div class="row">
+            <div class="col-sm-3">
+                {% for  in  %}{% endfor %}
+            </div>
+            <div class="col-sm-9"></div>
+        </div>
     </div>
 {% endblock main-content %}
