--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -6,7 +6,9 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-sm-3">
-                {% for  in  %}{% endfor %}
+                {% for val in title  %}
+                    {{val.title}}
+                {% endfor %}
             </div>
             <div class="col-sm-9"></div>
         </div>
