--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -6,9 +6,12 @@
     <div class="container my-5">
         <div class="row">
             <div class="col-sm-3">
-                {% for val in title  %}
-                    {{val.title}}
-                {% endfor %}
+                <div class="list-group">
+                    {% for val in title  %}
+                        <a href="#" class="list-group-item list-group-item-action" aria-current="true">
+                        {{val.title}}
+                    {% endfor %}
+                </div>
             </div>
             <div class="col-sm-9"></div>
         </div>
