--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -13,7 +13,20 @@
                     {% endfor %}
                 </div>
             </div>
-            <div class="col-sm-9"></div>
+            <div class="col-sm-9">
+                <div class="row">
+                    {% for pro in product %}
+                        <div class="col text-center mb-4">
+                            <a href="{% url 'product-detail' prod.id %}" class="btn">
+                                <div>
+                                    <img src="{{prod.product_image.url}}" width="300px" height="200px" />
+                                    <div></div>
+                                </div>
+                            </a>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
 {% endblock main-content %}
