--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -17,10 +17,14 @@
                 <div class="row">
                     {% for pro in product %}
                         <div class="col text-center mb-4">
-                            <a href="{% url 'product-detail' prod.id %}" class="btn">
+                            <a href="#" class="btn">
                                 <div>
                                     <img src="{{prod.product_image.url}}" width="300px" height="200px" />
-                                    <div></div>
+                                    <div class="fw-bold"{{prod.title}}></div>
+                                    <div class="fw-bold text-danger">
+                                        Rs.{{prod.discounted_price}}/-
+                                        <small class="fw-light text-decoration-line-through">{{prod.selling_price}}</small>
+                                    </div>
                                 </div>
                             </a>
                         </div>
