--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -19,8 +19,8 @@
                         <div class="col text-center mb-4">
                             <a href="#" class="btn">
                                 <div>
-                                    <img src="{{prod.product_image.url}}" width="300px" height="200px" />
-                                    <div class="fw-bold"{{prod.title}}></div>
+                                    <img src="{{pro.product_image.url}}" width="300px" height="200px" />
+                                    <div class="fw-bold">{{pro.title}}</div>
                                     <div class="fw-bold text-danger">
                                         Rs.{{prod.discounted_price}}/-
                                         <small class="fw-light text-decoration-line-through">{{prod.selling_price}}</small>
