--- a/ecom/app/templates/app/category.html
+++ b/ecom/app/templates/app/category.html
@@ -22,8 +22,8 @@
                                     <img src="{{pro.product_image.url}}" width="300px" height="200px" />
                                     <div class="fw-bold">{{pro.title}}</div>
                                     <div class="fw-bold text-danger">
-                                        Rs.{{prod.discounted_price}}/-
-                                        <small class="fw-light text-decoration-line-through">{{prod.selling_price}}</small>
+                                        Rs.{{pro.discounted_price}}/-
+                                        <small class="fw-light text-decoration-line-through">{{pro.selling_price}}</small>
                                     </div>
                                 </div>
                             </a>
