--- a/ecom/app/templates/app/productdetail.html
+++ b/ecom/app/templates/app/productdetail.html
@@ -1,3 +1,6 @@
 {% extends 'app/base.html' %}
 {% load static %}
 {% block title %}Category{% endblock title %}
+{% block main-content %}
+
+{% endblock main-content %}
