"Added h1 heading 'Product Detail' to productdetail.html template"

--- a/ecom/app/templates/app/productdetail.html
+++ b/ecom/app/templates/app/productdetail.html
@@ -2,5 +2,5 @@
 {% load static %}
 {% block title %}Category{% endblock title %}
 {% block main-content %}
-
+<h1>Product Detail</h1>
 {% endblock main-content %}
