--- a/ecom/app/templates/app/productdetail.html
+++ b/ecom/app/templates/app/productdetail.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %}
 {% load static %}
-{% block title %}Category{% endblock title %}
+{% block title %}Product Details{% endblock title %}
 {% block main-content %}
-<h1>Product Detail</h1>
+<h1>Product Detail{{pk}}</h1>
 {% endblock main-content %}
