--- a/ecom/app/templates/app/productdetail.html
+++ b/ecom/app/templates/app/productdetail.html
@@ -2,5 +2,5 @@
 {% load static %}
 {% block title %}Product Details{% endblock title %}
 {% block main-content %}
-<h1>Product Detail{{pk}}</h1>
+<h1>Product Detail{{product}}</h1>
 {% endblock main-content %}
