"Added product selling price with strike-through, product features heading, and product description to product detail template."

--- a/ecom/app/templates/app/productdetail.html
+++ b/ecom/app/templates/app/productdetail.html
@@ -10,6 +10,10 @@
             <div class="productdetail col-lg-5">
                 <h1 style="font-family: Georgia; font-size: 50px;">{{product.title}}</h1>
                 <h6 style="font-family: Georgia; font-size: 30px;">Rs.{{product.discounted_price}}/-</h6>
+                <small class="text-decoration-line-through text-muted fs-5"><del>Rs.{{product.selling_price}}/-
+                </del></small>
+                <br><br><h4>Product Features</h4>
+                <h6 style="font-family: Georgia; font-size: 20px;">{{product.description}}</h6>
             </div>
         </div>
     </div>
