--- a/ecom/app/templates/app/home.html
+++ b/ecom/app/templates/app/home.html
@@ -38,7 +38,7 @@
     <div class="row container">
         <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
             <div class="goodnesssec buttermilk smbg">
-                <a href="#">
+                <a href="{% url 'category' 'GH' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/buffalo-ghee.png'%}" class="img-responsive" alt="">
                         <p class="mlkpro">Ghee</p>
@@ -49,7 +49,7 @@
 
         <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
             <div class="goodnesssec buttermilk curdbgpro">
-                <a href="#">
+                <a href="{% url 'category' 'CR' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/curd-total.png'%}" class="img-responsive center-block" alt="">
                         <p class="mlkpro">Curd</p>
@@ -60,10 +60,10 @@
 
         <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
             <div class="goodnesssec buttermilk buttermilk">
-                <a href="#">
+                <a href="{% url 'category' 'IC' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/kulfi.png'%}" class="img-responsive center-block" alt="">
-                        <p class="mlkpro">Kulfi</p>
+                        <p class="mlkpro">Ice creams</p>
                     </div>
                 </a>
             </div>
@@ -73,7 +73,7 @@
 
         <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
             <div class="goodnesssec buttermilk smbg">
-                <a href="#">
+                <a href="{% url 'category' 'MS' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/milk-shake-chocolate.png'%}" class="img-responsive" alt="">
                         <p class="mlkpro">MilkShake</p>
@@ -84,7 +84,7 @@
 
         <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
             <div class="goodnesssec buttermilk curdbgpro">
-                <a href="#">
+                <a href="{% url 'category' 'ML' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/cow-milk.png'%}" class="img-responsive center-block" alt="">
                         <p class="mlkpro">Milk</p>
@@ -95,7 +95,7 @@
 
         <div class="col-md-4 col-sm-4 mi-go wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s" style="animation-duration: 1s; animation-delay: 0.6s; animation-name: none;">
             <div class="goodnesssec buttermilk buttermilk">
-                <a href="#">
+                <a href="{% url 'category' 'IC' %}">
                     <div class="goodnessseccont text-center">
                         <img src="{% static 'app/images/product/icbars.png'%}" class="img-responsive center-block" alt="">
                         <p class="mlkpro">Icebar</p>
