--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -45,10 +45,10 @@
                   <li><a class="dropdown-item" href="{% url 'category' 'IC' %}">Ice-creams</a></li>
                 </ul>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">About Us</a>
+                <a class="nav-link text-white" href="{% url 'about' %}">About Us</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="#">Contact Us</a>
+                <a class="nav-link text-white" href="{% url 'contact' %}">Contact Us</a>
               </li>
               
             </ul>
