--- a/ecom/app/templates/app/about.html
+++ b/ecom/app/templates/app/about.html
@@ -2,22 +2,47 @@
 {% load static %}
 {% block title %}About{% endblock title %}
 
+{% block banner_slider %}
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{% static 'app/images/banner/b1.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'app/images/banner/b2.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'app/images/banner/b3.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
+            <div class="carousel-item">
+                <img src="{% static 'app/images/banner/b4.jpg' %}" class="d-block w-100" alt="banner image">
+            </div>
+        </div>
+    </div>
+{% endblock banner_slider %}
+
 {% block main-content %}
 <div class="container mt-3">
+
     <br>
     <h2 class="text-center">About Us</h2>
     <br>
     <div class="row-container">
-        <p class="fs-4 text-center">This is a Public Limited Company that Deals with Milk Related Products  Base in Kenya Africa.<br>It was commisioned in 2017<br>It's the Fastest Growing Company in Kenya.</p>
+
+        <p class="fs-4 text-center">This is a Public Limited Company that Deals with Milk Related Products  Base in Kenya Africa.<br>It was commisioned in 2017<br>It's the Fastest Growing Company in Kenya.
+        </p>
     </div>
 
     <br><br>
     <h2 class="text-center">Mission</h2>
     <br>
     <div class="row-container">
+
         <p class="fs-4 text-center">To Provide Quality Milk Products to the People of Kenya and Beyond.
             To be the Leading Company in the Milk Industry in Kenya and Africa at Large.
-        To Provide Employment Opportunities to the People of Kenya.</p>
+            To Provide Employment Opportunities to the People of Kenya.
+        </p>
     </div>
 </div>
+<br><br>
 {% endblock main-content %}
