--- a/ecom/app/templates/app/contact.html
+++ b/ecom/app/templates/app/contact.html
@@ -1,6 +1,6 @@
 {% extends 'app/base.html' %}
 {% load static %}
-{% block title %}About{% endblock title %}
+{% block title %}Contact{% endblock title %}
 
 {% block banner_slider %}
     <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel" data-bs-interval="4000">
@@ -22,3 +22,16 @@
 {% endblock banner_slider %}
 
 {% block main-content %}
+<div class="container mt-3">
+    <br>
+    <h2 class="text-center">Contact Us</h2>
+    <br>
+</div>
+<div class="row container">
+    <p class="fs-4 text-center">Address</p>
+    <p class="fs-4 text-center">Contact : </p>
+    <p class="fs-4 text-center">Email : kk@gmail.com</p>
+</div>
+
+<br><br>
+{% endblock main-content %}
