"Updated urls and templates for customer registration"

--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -81,7 +81,7 @@
             </li>
             </li>
             <li class="nab-item dropdown mx-2">
-              <a href="#" class="nav-link text-white">Registration</a>
+              <a href="{% url 'customerregistration' %}" class="nav-link text-white">Registration</a>
             </li>
           </ul>
         </div>
