--- a/ecom/app/templates/app/customerregistration.html
+++ b/ecom/app/templates/app/customerregistration.html
@@ -25,6 +25,14 @@
                         <p class="alert alert-danger my-3">{{error}}</p>
                     {% endfor %}
                 {% endif %}
+                
+                {% if messages %}
+                {% for message in messages %}
+                <div class="alert alert-{{msg.tags}}" role="alert">
+                    {{msg}}
+                </div>
+                {% endfor %}
+                {% endif %}
             </form>
         </div>
     </div>
