--- a/ecom/app/templates/app/base.html
+++ b/ecom/app/templates/app/base.html
@@ -77,7 +77,7 @@
             </li>
             </li>
             <li class="nab-item dropdown mx-2">
-              <a href="#" class="nav-link text-white">Login</a>
+              <a href="{% url 'login' %}" class="nav-link text-white">Login</a>
             </li>
             </li>
             <li class="nab-item dropdown mx-2">
