"Updated login.html template: added password reset link, submit button, and formatting changes"

--- a/ecom/app/templates/app/login.html
+++ b/ecom/app/templates/app/login.html
@@ -14,7 +14,10 @@
                     <br>
                 {% endfor %}
 
-                <small><a href="{%%}"
+                <small><a href="{% url 'password_reset' %}">Forgot Password ?</a></small>
+                <br>
+                <input type="submit" value="Login" class="btn btn-primary mt-4">
+                <br>
             </form>
         </div>
     </div>
