--- a/ecom/app/templates/app/customerregistration.html
+++ b/ecom/app/templates/app/customerregistration.html
@@ -17,7 +17,7 @@
                 <input type="submit" value="Submit" class="btn btn-primary"> <br>
 
                 <div class="text-center text-primary fw-bold">
-                    <small>Existing User? <a href="#" class="text-danger">Login Now</a> </small>
+                    <small>Existing User? <a href="{% url 'login' %}" class="text-danger">Login Now</a> </small>
                 </div>
 
                 {% if form.non_field_errors %}
@@ -25,7 +25,7 @@
                         <p class="alert alert-danger my-3">{{error}}</p>
                     {% endfor %}
                 {% endif %}
-                
+
                 {% if messages %}
                 {% for message in messages %}
                 <div class="alert alert-{{msg.tags}}" role="alert">
