--- a/ecom/app/templates/app/login.html
+++ b/ecom/app/templates/app/login.html
@@ -18,6 +18,15 @@
                 <br>
                 <input type="submit" value="Login" class="btn btn-primary mt-4">
                 <br>
+                <div class="text-center text-primary fw-bold">
+                    <small>New User? <a href="{% url 'customerregistration' %}"class="text-danger">Create An Account</a> </small>
+                </div>
+
+                {% if form.non_field_errors %}
+                    {% for error in form.non_field_errors %}
+                        <p class="alert alert-danger my-3">{{error}}</p>
+                    {% endfor %}
+                {% endif %}
             </form>
         </div>
     </div>
